[package]
authors = ["Sam Martin-Brown <nivekkas@gmail.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "pulseaudio-sink-listener"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.3.14", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
pulse = { version = "2.1", package = "libpulse-binding" }
